# easyschool-saint-augustin

./: .env.example  .gitattributes  .gitignore  AUDIT_CORRECTIONS_FINAL.md  BACKUP.md  DIAGNOSTIC_COMPLET_EASY_SCHOOL.md  EasySchool.spec  MIGRATIONS.md  PHASE_1_STABILISATION_CRITIQUE.md  PHASE_IHM_AMELIORATION_NETTE.md  PHASE_TABLEAU_DE_BORD.md  PHASE_TEMPLATE_UI_MODERNE.md  PLAN_STABILISATION.md  README.md  README_PYTHON.md  RESET_DEV_DATABASE.md  SAFE_DB_CONSTRAINT_REVIEW.sql  SECURITE_ENV.md  TESTS_MANUELS_COMPTABILITE.md  TESTS_MANUELS_IHM.md  TESTS_MANUELS_KIOSQUE.md  TESTS_MANUELS_PARAMETRES.md  TESTS_MANUELS_SCOLARITE_INSCRIPTIONS.md  TESTS_MANUELS_STATISTIQUES.md  TESTS_MANUELS_TABLEAU_DE_BORD.md  TESTS_MANUELS_TEMPLATE_UI.md  TESTS_MANUELS_VERSEMENTS.md  alembic.ini  eleves_avertissements_import_final.csv  eleves_rejetes_avant_import.csv  eleves_rejetes_nouveau_fichier_simulation.csv  familles_rejetees_import.csv  main.py  pyproject.toml  requirements-build.txt  requirements-dev.txt  requirements.txt  version_info.txt
.codex_tmp/: inspect_famille_xlsx.mjs
app/: __init__.py  config.py  database.py  logging_config.py  session.py  styles.py  version.py
migrations/: env.py
models/: __init__.py  annee_scolaire.py  article.py  audit_log.py  autres_frais.py  classe.py  compte.py  cycle.py  echeance_paiement.py  eleve.py  etablissement.py  famille.py  inscription.py  inscription_autres_frais.py  kit_assemblage.py  kit_composant.py  montant_autres_frais.py  montant_cantine.py  montant_scol.py  montant_transport.py  nationalite.py  niveau.py  permission.py  prestataire.py  prestation_annexe.py  prestation_tarif_niveau.py  profil.py  profil_permission.py  religion.py  sortie_fin.py  stock_cour.py  stock_entree.py  stock_sortie.py  type_sortie.py  utilisateur.py  ventilation_prestation.py  versement_autres_frais.py  versement_scol.py
packaging/: easy_school.spec  installer.iss  make_icon.py
scripts/: backup_db.ps1  import_eleves.py  import_familles.py  restore_db.ps1
services/: __init__.py  annee_scolaire_service.py  article_service.py  audit_log_service.py  autres_frais_service.py  classe_service.py  comptabilite_service.py  compte_service.py  cycle_service.py  dashboard_service.py  dashboard_v2_service.py  echeancier_service.py  eleve_service.py  etablissement_service.py  (+21 more)
(+82 files in other folders)
