# Configuration outillage qualite (ruff, pytest, coverage).
# Ne definit pas de [build-system]/[project] : l'application n'est pas
# packagee via pip/setuptools, mais via PyInstaller (voir EasySchool.spec).

[tool.ruff]
line-length = 120
target-version = "py312"
exclude = ["venv", "build", "dist", "backup_installed_exe_*"]

[tool.ruff.lint]
# Selection volontairement restreinte au demarrage : erreurs reelles (F) et
# style pycodestyle (E) hors longueur de ligne (deja geree par line-length).
select = ["E", "F"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["app", "models", "services", "utils", "views"]
omit = ["*/__pycache__/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
